# Bit-Firmware

./: .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/src/: Color.h  Filepaths.cpp  Filepaths.hpp  Pins.hpp  UIThread.cpp  UIThread.h
main/src/Devices/: Battery.cpp  Battery.h  Display.cpp  Display.h  Input.cpp  Input.h  LEDController.cpp  LEDController.h  SingleDigitalLED.cpp  SingleDigitalLED.h  SingleLED.cpp  SingleLED.h  SinglePwmLED.cpp  SinglePwmLED.h
main/src/FS/: ArchiveCache.cpp  ArchiveCache.h  FSFileImpl.cpp  FSFileImpl.h  File.cpp  File.h  FileArchive.cpp  FileArchive.h  FileCache.h  FileImpl.h  RamFile.cpp  RamFile.h  RawCache.cpp  RawCache.h  SPIFFS.h
main/src/File/: FSFileImpl.h
main/src/GIF/: GIF.cpp  gifdec.cpp
main/src/GameEngine/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameRunner.cpp  GameRunner.h  GameSystem.cpp  GameSystem.h  PixelDim.hpp  ResourceManager.cpp  ResourceManager.h
main/src/Games/: TestGame.cpp  TestGame.h
main/src/JigHWTest/: JigHWTest.cpp  JigHWTest.h  SPIFFSChecksum.hpp
main/src/LV_Interface/: FSLVGL.cpp  FSLVGL.h  InputLVGL.cpp  InputLVGL.h  LVGIF.cpp  LVGL.cpp  LVGL.h  LVModal.cpp  LVModal.h  LVScreen.cpp  LVSelectable.cpp
main/src/Modals/: LockedGame.cpp  LockedGame.h  NewRobot.cpp  NewRobot.h  UnknownRobot.cpp  UnknownRobot.h  UpdateRobot.cpp  UpdateRobot.h
main/src/NVSUpgrades/: NVSUpgrade_1.cpp  NVSUpgrade_1.h  NVSUpgrades.h
main/src/Periph/: ADC.cpp  ADC.h  I2C.h  NVSFlash.cpp  NVSFlash.h  PWM.cpp  PWM.h  PinOut.h  Timer.cpp  (+1 more)
(+490 files in other folders)
